[package]
name = "SKAS"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
des = "0.8"
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
rsa = "0.9"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
flate2 = "1.0"