[package]
name = "skas"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1.0"
base64 = "0.22"
cbc = "0.1"
cipher = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
des = "0.8"
ecb = "0.1"
flate2 = "1.1"
hex = "0.4"
hmac = "0.13"
md5 = "0.8"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "json", "rustls-tls"] }
rsa = "0.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.11"
uuid = { version = "1.18", features = ["v4"] }
